--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,21 +1,88 @@
 {
-    "contactList": {
-      "title": "Liste de Contacts",
-      "permissionDenied": "Permission Refusée",
-      "permissionMessage": "Vous devez accorder l'autorisation d'accès aux contacts pour utiliser cette fonctionnalité.",
-      "ok": "D'accord"
+  "auth": {
+    "login": {
+      "welcome": "Bienvenue à AgriModel",
+      "email_label": "E-mail",
+      "email_placeholder": "Entrez votre e-mail",
+      "password_label": "Mot de passe",
+      "password_placeholder": "Entrez votre mot de passe",
+      "forgot_password": "Mot de passe oublié?",
+      "login": "Connexion",
+      "signup_prompt": "Vous n'avez pas de compte?",
+      "signup_link": "S'inscrire",
+      "or_text": "- OU -",
+      "google_login": "Continuer avec Google",
+      "switch_theme": "Changer de thème"
     },
-    "settings": {
-      "language": "paramètres",
-      "darkMode": "Mode sombre"
+    "signup": {
+      "create_account": "Créer un compte",
+      "names_label": "Noms",
+      "names_placeholder": "Entrez vos noms",
+      "email_label": "E-mail",
+      "email_placeholder": "Entrez votre e-mail",
+      "phone_label": "Téléphone",
+      "phone_placeholder": "Entrez votre numéro de téléphone",
+      "password_label": "Mot de passe",
+      "password_placeholder": "Entrez votre mot de passe",
+      "confirm_password_label": "Confirmez le mot de passe",
+      "confirm_password_placeholder": "Confirmez votre mot de passe",
+      "agree_terms": "J'accepte vos",
+      "terms_and_conditions": "termes & conditions",
+      "already_have_account": "Vous avez déjà un compte?",
+      "login_link": "Connexion",
+      "google_signup": "S'inscrire avec Google",
+      "or_text": "- OU -"
     },
-    "menus": {
-      "logout": "Se déconnecter",
-      "profile": "Profil",
-      "home": "Accueil",
-      "signin": "Se connecter",
-      "signup": "S'inscrire",
-      "calculator": "Calculatrice" 
+    "forgot_password": {
+      "title": "Mot de passe oublié",
+      "description": "Entrez votre email pour réinitialiser votre compte",
+      "email_label": "Adresse e-mail",
+      "email_placeholder": "Entrez votre email",
+      "continue": "Continuer",
+      "cancel": "Annuler"
+    },
+    "verification": {
+      "title": "Entrez le code de vérification",
+      "description": "Nous avons envoyé un code à votre email {{email}}",
+      "verify": "Vérifier",
+      "resend_prompt": "Vous n'avez pas reçu le code ?",
+      "resend_code": "Renvoyer le code",
+      "back_to_login": "Retour à la connexion"
+    },
+    "reset_password": {
+      "title": "Réinitialisez votre mot de passe",
+      "description": "Le mot de passe doit être différent de l'ancien",
+      "password_label": "Nouveau mot de passe",
+      "password_placeholder": "Entrez un nouveau mot de passe",
+      "confirm_password_label": "Confirmer le mot de passe",
+      "confirm_password_placeholder": "Confirmez le mot de passe",
+      "continue": "Continuer",
+      "cancel": "Annuler"
+    },
+    "success": {
+      "title": "Réussi",
+      "description": "Félicitations ! Votre mot de passe a été modifié.",
+      "continue": "Continuer"
     }
+  },
+  "terms": {
+    "title": "Conditions Générales",
+    "subtitle": "Utilisation Générale du Site",
+    "last_revised": "Dernière révision:",
+    "last_revised_date": "11 septembre 2024",
+    "content": [
+      {
+        "header": "1. VOTRE ACCORD",
+        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel diam eget dolor vehicula dictum sit amet id lectus. Integer blandit nulla ac risus consequat, nec elementum metus aliquam."
+      },
+      {
+        "header": "VEUILLEZ NOTER",
+        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel diam eget dolor vehicula dictum sit amet id lectus."
+      },
+      {
+        "header": "NOTRE ACCORD",
+        "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel diam eget dolor vehicula dictum sit amet id lectus."
+      }
+    ]
   }
-  
+}
