--- a/locales/fr.json
+++ b/locales/fr.json
@@ -47,7 +47,9 @@
       "verify": "Vérifier",
       "resend_prompt": "Vous n'avez pas reçu le code ?",
       "resend_code": "Renvoyer le code",
-      "back_to_login": "Retour à la connexion"
+      "back_to_login": "Retour à la connexion",
+      "back": "Retour",
+      "next": "Suivant"
     },
     "reset_password": {
       "title": "Réinitialisez votre mot de passe",
@@ -56,7 +58,7 @@
       "password_placeholder": "Entrez un nouveau mot de passe",
       "confirm_password_label": "Confirmer le mot de passe",
       "confirm_password_placeholder": "Confirmez le mot de passe",
-      "continue": "Continuer",
+      "continue": "Réinitialiser",
       "cancel": "Annuler"
     },
     "success": {
