--- a/locales/rw.json
+++ b/locales/rw.json
@@ -103,7 +103,8 @@
     "confirm_leave": "Yego, sohoka",
     "cancel": "Reka",
     "joining": "Kwinjira...",
-    "leaving": "Gusohoka..."
+    "leaving": "Gusohoka...",
+    "viewAll": "Reba byose"
   }, 
   "profile": {
     "edit_profile": "Hindura Umwirondoro",
